# DiPECS

./: .env.example  .gitattributes  .gitignore  .gitmodules  0504daemonspec.md  0505plan_session-ses_208a.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  deny.toml  rust-toolchain.toml  rustfmt.toml  v0.2-changelog.md
.cargo/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
crates/aios-action/: Cargo.toml
crates/aios-action/src/: android_adapter.rs  lib.rs  offline_adapter.rs
crates/aios-action/tests/: action_executor_test.rs  android_bridge_e2e_test.rs
crates/aios-adapter/: Cargo.toml
crates/aios-adapter/src/: binder_probe.rs  daemon.rs  lib.rs  main.rs  proc_reader.rs
crates/aios-agent/: Cargo.toml
crates/aios-agent/src/: lib.rs  router.rs
crates/aios-agent/src/backends/: fallback.rs  local_evaluator.rs  mod.rs  predictive.rs  prefetch_target.rs  rule_based.rs
crates/aios-agent/src/backends/cloud_llm/: client.rs  config.rs  mod.rs  summarizer.rs  translate.rs
crates/aios-agent/src/backends/predictive/: ensemble.rs  predictor.rs  tests.rs  train.rs  types.rs  validation_tests.rs
crates/aios-agent/tests/: baseline_comparison_test.rs  cloud_accuracy_test.rs  mock_cloud_proxy_test.rs
crates/aios-cli/: Cargo.toml
crates/aios-cli/src/: android_bridge.rs  lib.rs  main.rs  next_app.rs  next_app_benchmark.rs  replay.rs
crates/aios-cli/src/benchmark_next_app/: action_value.rs  baselines.rs  context_loader.rs  metrics.rs  mod.rs  predictor.rs  report.rs  runner.rs  types.rs
crates/aios-cli/src/next_app/: loader.rs  mod.rs  net_benefit.rs
crates/aios-cli/src/next_app/adaptive_baseline/: markov3.rs  mod.rs  tests.rs  time_markov.rs
crates/aios-cli/src/next_app/strong_baseline/: markov.rs  mod.rs
crates/aios-cli/tests/: academic_next_app_baselines_test.rs  adapter_integration_test.rs  benchmark_next_app_test.rs  golden_trace_integration_test.rs  next_app_ablation_ci_test.rs  next_app_ablation_test.rs  next_app_benchmark_test.rs  next_app_lsapp_test.rs  next_app_net_benefit_test.rs  noop_rate_test.rs  replay_audit_leak_test.rs  replay_denial_golden_test.rs  replay_golden_hash_test.rs  replay_jsonl_test.rs  replay_large_trace_golden_test.rs  resource_overhead_dataset_test.rs  resource_overhead_test.rs  stability_dataset_test.rs  ux_metrics_dataset_test.rs
crates/aios-cli/tests/next_app_net_benefit_test/: keepalive_collection_script.rs  keepalive_memory_pressure.rs  prefetch_collection_script.rs  release_memory_collection_script.rs  support.rs
crates/aios-collector/: Cargo.toml
crates/aios-collector/src/: android_jsonl.rs  binder_probe.rs  collection_stats.rs  fanotify_monitor.rs  lib.rs  proc_reader.rs  system_collector.rs
crates/aios-collector/tests/: collection_stats_test.rs
crates/aios-core/: Cargo.toml
crates/aios-core/src/: action_bus.rs  action_lifecycle.rs  collector_ingress.rs  context_builder.rs  context_memory.rs  lib.rs  policy_engine.rs  privacy_airgap.rs  text_analysis.rs  trace_engine.rs
crates/aios-core/src/governance/: mod.rs
crates/aios-core/tests/: action_bus_test.rs  action_lifecycle_test.rs  collector_ingress_test.rs  context_builder_test.rs  policy_denial_golden_test.rs  policy_engine_test.rs  privacy_airgap_property_test.rs  privacy_airgap_test.rs  privacy_leak_test.rs  trace_engine_test.rs
crates/aios-daemon/: Cargo.toml
crates/aios-daemon/src/: collection.rs  daemon.rs  lib.rs  main.rs  pipeline.rs
crates/aios-daemon/tests/: pipeline_test.rs
data/: README.md
docs/: book.toml  mkdocs.yml
lab4/: Cargo.toml  README.md  pyproject.toml
lab4/ai-log/: 01-local-inference.md  02-rpc-distributed.md  03-ray-scheduling.md
lab4/crates/lab4-tools/: Cargo.toml
lab4/crates/lab4-tools/src/: command.rs  env.rs  error.rs  jsonl.rs  lib.rs  llama.rs  prompt.rs  stats.rs  storage.rs
lab4/data/models/: README.md
lab4/data/prompts/: batch-prompts.jsonl  quality-prompts.jsonl  startup-prompts.jsonl
lab4/data/results/: batch-matrix.jsonl  ctx-1024.jsonl  ctx-2048.jsonl  ctx-4096.jsonl  ctx-512.jsonl  mmap-matrix.jsonl  quality-qwen35-temp-0.2.jsonl  quality-qwen35-temp-0.5.jsonl  quality-qwen35-temp-0.8.jsonl  quality-temp-0.2.jsonl  quality-temp-0.8.jsonl  ray-batch-results.jsonl  ray-batch-results.summary.json  rpc-distributed-bench-qwen35.jsonl  rpc-distributed-quality-qwen35.jsonl  rpc-single-bench-qwen35.jsonl  rpc-single-quality-qwen35.jsonl  smoke-llama-bench.jsonl  smoke-llama-cpp-quality.jsonl  smoke-rust-llama-quality.jsonl  startup-mmap.jsonl  startup-no-mmap.jsonl  threads-matrix.jsonl
lab4/data/results/concurrency-stress/: concurrency-stress-detail.jsonl  concurrency-stress-summary.json
lab4/data/results/param-opt/: param-opt-detail.jsonl  param-opt-summary.json
lab4/data/results/ray-failover/: ray-failover-detail.jsonl  ray-failover-summary.json
lab4/data/results/ray-loadbalance-30/: ray-loadbalance-30-detail.jsonl  ray-loadbalance-30-detail.summary.json
lab4/docs/: README.md  llama-cpp-setup.md  os-knowledge.md  rpc-two-machine-setup.md  rust-implementation.md  task-breakdown.md
lab4/reports/: README.md  ceph-analysis.md  concurrency-stress-report.md  deployment.md  param-optimization-report.md  performance-analysis.md  quality-evaluation-report.md  quality-evaluation.md  ray-bonus-report.md  ray-experiment-report.md  smoke.md
lab4/reports/archive/: deployment.md  performance-analysis.md
lab4/scripts/: concurrency_stress_test.py  param_optimization.py  ray_batch_inference.py  ray_failover_test.py
lab4/scripts/tests/: test_param_optimization.py  test_ray_experiments.py
midterm0/: DiPECS-midterm.pptx  DiPECS-midterm1.pptx  QA.md  package.json  pnpm-lock.yaml  slides.md  slidesold.md
mytyp/: midterm-report.typ
othergroups/: ds-chat.md
scripts/: android-runner.sh  (+5 more)
tests/integration/: Cargo.toml  README.md  action_success_rate.rs  benchmark_cache.rs  cloud_llm_stability.rs  helpers.rs  main.rs  noop_coverage.rs  policy_denial.rs  rationale_coverage.rs  routing_strategy.rs  signature_cross_verify.rs  window_size.rs
(+302 files in other folders)
