[package]
name = "aios-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "aios-cli"
path = "src/main.rs"

[dependencies]
aios-spec = { workspace = true }
aios-core = { workspace = true }
aios-agent = { workspace = true }
aios-action = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
