[package]
name = "aios-collector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aios-spec = { workspace = true }
# aios-core = { workspace = true }
# aios-action = { workspace = true }
tracing = { workspace = true }
# tracing-subscriber = { workspace = true }
# anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
