[package]
name = "aios-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aios-spec = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
