[package]
name = "aios-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aios-spec = { workspace = true }
aios-core = { workspace = true }
aios-action = { workspace = true }
aios-collector = { workspace = true }
aios-agent = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "dipecsd"
path = "src/main.rs"
